--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -1,3 +1,7 @@
+def COLOR_MAP = [
+    'SUCCESS': 'good', 
+    'FAILURE': 'danger',
+]
 pipeline {
     agent any
     tools {
@@ -17,6 +21,9 @@ pipeline {
         NEXUS_LOGIN = 'nexuslogin'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
+        registryCredential = 'ecr:us-west-1:Awscreds'
+        appRegistry = '974521090729.dkr.ecr.us-east-1.amazonaws.com/vprofileimage'
+        vprofileRegistry = 'https://974521090729.dkr.ecr.us-east-1.amazonaws.com'
     }
 
     stages {
@@ -88,5 +95,23 @@ pipeline {
      )
             }
     }
+    stage ('Build App Image') {
+        steps {
+            script {
+                dockerImage = docker.build(appRegistry + ":$BUILD_NUMBER", "./Docker-files/app/multistage/")
+            }
+        }
+    }
+    stage ('Upload App Image') {
+        steps{
+            script {
+                docker.withRegistry( vprofileRegistry, registryCredential ) {
+                    dockerImage.push("$BUILD_NUMBER")
+                    dockerImage.push('latest') 
+                }
+            }
+        }
+    }
+
 }
 }
