--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -118,7 +118,7 @@ pipeline {
     stage ('Deploy to ECS Staging'){
         steps{
             withAWS(credentials: 'Awscreds', region: 'us-east-1')
-            sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
+            sh 'aws ecs update-service --cluster vprostaging --service vproappstagesvc --force-new-deployment'
         }
     }
 
